wrap and categoryname post placed correctly

--- a/src/sass/_aside.sass
+++ b/src/sass/_aside.sass
@@ -1,6 +1,12 @@
 .aside a
   text-decoration: none
   
+.aside h5
+  padding-bottom: 16px
+  
+.aside p, .aside ul
+  padding-bottom: 40px
+  
 .aside__category
   color: #414141
   
