--- a/src/sass/_mainarea.sass
+++ b/src/sass/_mainarea.sass
@@ -2,8 +2,9 @@
 .wrap
   display: flex
   flex-direction: column
-  width: 80%
+  width: 89%
   margin-left: 2%
+  margin-top: 8px
 
 
 .aside
@@ -12,11 +13,13 @@
   margin-left: 1%
   margin-top: 12px
   font-size: 12px
+  padding-left: 24px
+  width: 100%
   
 .postsarea
   width: 78%
   min-height: 300px
-  margin-left: 10%
+  margin-left: 9%
   margin-top: 12px 
   
 
